fix: кнопки и диалог (убрать resize, overflow, scroll-bar, указать button type); feat: добавить aria-hidden для иконки сердца; refactor: html и css (переместить кнопку, объединить стили, переименовать переменные); chore(fonts): заменить fallback c sans-serif на fantasy

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,17 +26,15 @@
 
 .header,
 .card,
-.card__like-button,
-.footer__save-button,
-.dialog,
-.dialog__button {
+.button,
+.dialog {
   background-color: var(--main-color, #fff);
   border: 2px solid var(--accent-color, #000);
 }
 
 .header {
   margin: 98px auto;
-  font-family: var(--accent-font-family), sans-serif;
+  font-family: var(--accent-font-family,'Press Start 2P'), fantasy;
   font-weight: 400;
   text-align: center;
   padding: var(--header-clamp-padding-top-bottom) var(--header-clamp-padding-right-left);
@@ -87,7 +85,7 @@
   position: absolute;
   inset-block-start: 57px;
   inset-inline-end: 25px;
-  color: var(--accent-color-transparent-50, rgba(0, 0, 0, 0.5));
+  color: var(--img-label-color, rgba(0, 0, 0, 0.5));
   text-shadow: 
   -1px 0 var(--text-stroke-color, rgba(255, 255, 255, 0.5)),
   0 1px var(--text-stroke-color, rgba(255, 255, 255, 0.5)),
@@ -104,12 +102,10 @@
 }
 
 .img__label,
-.card__like-button,
-.footer__save-button,
-.dialog__text,
-.dialog__button {
+.button,
+.dialog__text {
   font-size: 14px;
-  font-family: var(--accent-font-family,'Press Start 2P'), sans-serif;
+  font-family: var(--accent-font-family,'Press Start 2P'), fantasy;
 }
 
 .card__description {
@@ -132,7 +128,8 @@
 
 .card__like-button {
   padding: 0 35px;
-  height: 38px;
+  block-size: 38px;
+  max-inline-size: 130px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -151,7 +148,7 @@
   inline-size: 38px;
 }
 
-.footer__save-button {
+.save-button {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -164,17 +161,20 @@
   height: 21px;
 }
 
-dialog[open] {
+dialog {
   max-inline-size: var(--responsive-clamp-dialog);
-  padding: 30px;
+}
+
+dialog[open] {
+  padding: 28px;
   display: grid;
+  align-items: center;
   column-gap: 20px;
   row-gap: 30px;
-  overflow: hidden;
 }
 
 .dialog::backdrop {
-  background-color: var(--accent-color-transparent-75 ,rgba(0, 0, 0, 0.75));
+  background-color: var(--dialog-backdrop-color,rgba(0, 0, 0, 0.75));
 }
 
 .dialog__floppy-icon {
@@ -195,29 +195,23 @@ dialog[open] {
 
 .dialog__button {
   grid-column: 1 / 3;
-  padding: 10.7px 130.5px;
+  padding: 10.7px var(--dialog-button-clamp-inline-padding);
 }
 
 /* --------------------------- СОСТОЯНИЯ и ЭФФЕКТЫ КНОПОК ----------------------- */
-.card__like-button,
-.footer__save-button,
-.dialog__button {
+.button {
   line-height: 0.9;
   transition: box-shadow 0.3s ease;
   position: relative;
 }
 
-.card__like-button:hover,
-.card__icon-button:hover,
-.footer__save-button:hover,
-.dialog__button:hover {
+.button:hover,
+.card__icon-button:hover {
   cursor: pointer;
 }
 
-.card__like-button:focus,
 .card__icon-button:focus,
-.footer__save-button:focus,
-.dialog__button:focus {
+.button:focus {
   outline: none;
 }
 
@@ -225,15 +219,11 @@ dialog[open] {
   border: 2px solid var(--accent-color, #000);
 }
 
-.card__like-button:focus-visible,
-.footer__save-button:focus-visible,
-.dialog__button:focus-visible {
+.button:focus-visible {
   box-shadow: 2px 2px 0 var(--accent-color, #000);
 }
 
-.card__like-button::before,
-.footer__save-button::before,
-.dialog__button::before {
+.button::before {
   content: "";
   background-color: var(--accent-color, #000);
   position: absolute;
@@ -244,9 +234,7 @@ dialog[open] {
   z-index: 0;
 }
 
-.card__like-button:hover::before,
-.footer__save-button:hover::before,
-.dialog__button:hover::before {
+.button:hover::before {
   transform: scaleX(1);
 }
 
@@ -302,7 +290,7 @@ dialog[open] {
     inset-block-start: 80px;
   }
 
-  .footer__save-button {
+  .save-button {
     flex-direction: column;
   }
 
@@ -313,10 +301,5 @@ dialog[open] {
 
   dialog[open] {
     padding: 28px 38px;
-  }
-
-  .dialog__button {
-    padding-inline-end: 100.5px;
-    padding-inline-start: 100.5px;
   }
 }
